--- a/reso-bot/package.json
+++ b/reso-bot/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@sendaifun/sonic-agent-kit": "^1.0.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.0",
     "ai": "^4.1.61",
